--- a/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
+++ b/SIM.Presentation/Pages/Shared/_LayoutAuth.cshtml
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <a asp-page="/Transaction/Index"
-                        class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Transaction Category" ? "bg-gray-700" : "")">
+                        class="flex items-center p-2 text-gray-900 rounded-lg text-white hover:bg-gray-700 group @(ViewData["ActivePage"]?.ToString() == "Transaction" ? "bg-gray-700" : "")">
                         <span class="material-symbols-outlined">
                             receipt_long
                         </span>
