--- a/SIM.Presentation/Pages/Transaction/Index.cshtml
+++ b/SIM.Presentation/Pages/Transaction/Index.cshtml
@@ -23,7 +23,7 @@
                 new TableCell { Value = t.TotalAmount.ToString("C") },
                 new TableCell { Value = t.CategoryName },
                 new TableCell { Value = t.VendorName },
-                new TableCell { Value = t.CreateDate.ToString("g") }
+                new TableCell { Value = t.CreateDate.ToString("dd/MM/yyyy") },
             },
             Actions = new List<TableAction>
             {
