--- a/SIM.Presentation/Pages/Transaction/Index.cshtml
+++ b/SIM.Presentation/Pages/Transaction/Index.cshtml
@@ -10,6 +10,7 @@
         <h1 class="mb-4 text-lg font-bold">Transactions</h1>
         <a asp-page="/Transaction/Upsert" class="border font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500">+ Create Transaction</a>
     </div>
+    <partial name="_BudgetWarning" model="Model.OverBudgetCount" />
 
     @await Html.PartialAsync(partialViewName: "_DataTable", new DataTableViewModel
     {
@@ -29,7 +30,7 @@
             {
                 new TableAction { Url = $"/Transaction/Upsert/{t.Id}", Icon = "edit_square", CssClass = "text-blue-700 hover:text-blue-600" },
                 new TableAction { Url = $"/Transaction/Delete/{t.Id}", Icon = "delete", CssClass = "text-red-700 hover:text-red-600" }
-              }
+           }
         }).ToList()
     })
 </div>
