--- a/SIM.Presentation/Pages/Account/Index.cshtml
+++ b/SIM.Presentation/Pages/Account/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="p-4 border border-gray-700 shadow-sm rounded-lg">
-    <h1 class="mb-4 text-lg font-bold">Acount Info</h1>
+    <h1 class="mb-4 text-lg font-bold">Account Info</h1>
 
     <form method="post">
         <div class="grid gap-6 mb-6 md:grid-cols-2">
